# bevy_mod_config

./: .editorconfig  Cargo.toml  README.md
examples/: egui.rs  example.rs
macros/: Cargo.toml
macros/src/: config.rs  lib.rs
src/: __import.rs  app.rs  enum_.rs  impls.rs  lib.rs  macro_doc.rs  manager.rs  query.rs  tree.rs
src/manager/: egui.rs  serde.rs
src/manager/egui/: number_impl.rs
tests/: dump_load_json.rs  generics.rs
