[workspace]
members = [
    ".",
    "macros",
]
resolver = "2"

[package]
name = "bevy_mod_config"
version = "0.1.0"
edition = "2024"
authors = ["SOFe <sofe2038@gmail.com>"]
description = "A Bevy plugin for configuration management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SOF3/bevy_mod_config"

[features]
default = ["std", "bevy_color", "serde"]
std = []
serde = ["dep:serde", "bevy_color?/serde"]
serde_json = ["serde", "dep:serde_json", "std", "serde_json/std"]
egui = ["dep:bevy_egui", "dep:num-traits"]
bevy_color = ["dep:bevy_color"]

[dependencies]
bevy_app = { version = "0.16.1", default-features = false }
bevy_ecs = { version = "0.16.1", default-features = false }
bevy_mod_config_macros = { path = "macros", version = "0.1.0" }
hashbrown = "0.15.4"
variadics_please = "1.1.0"

serde = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, optional = true, features = ["raw_value", "std"] }
bevy_egui = { version = "0.35.0", default-features = false, optional = true }
bevy_color = { version = "0.16.2", optional = true }
num-traits = { version = "0.2.19", optional = true }

[dev-dependencies]
bevy_log = "0.16.1"
bevy_time = "0.16.1"
bevy_egui = { version = "0.35.0", default-features = false, features = ["default_fonts", "render"] }
bevy_sprite = "0.16.1"

[dev-dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "accesskit_unix",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_sprite",
    "bevy_window",
    "bevy_winit",
    "android-game-activity",
    "png",
    "std",
    "webgl2",
    "x11",
]

[[example]]
name = "egui"
required-features = ["egui", "bevy_color"]
